<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/poppins"
        android:text="@string/title2"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_layout"
        style="@style/InputLayout"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txt_login"
        android:hint="Username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_user"
            style="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/InputLayout"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/user_layout"
        android:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            style="@style/EditText"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/password_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_marginStart="38dp"
        android:fontFamily="@font/poppins"
        android:text="@string/remember"
        android:textSize="10sp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="Forget Password?"
        android:textSize="10sp"
        android:textColor="#525BFF"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/poppins"
        android:text="Login"
        android:textStyle="bold"
        android:backgroundTint="#525BFF"
        android:textColor="#FFFFFF"
        android:padding="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins"
        android:text="@string/acc_member"
        android:textSize="14sp" />
</RelativeLayout>
