<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/poppins"
        android:text="@string/title1"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_layout"
        style="@style/InputLayout"
        android:layout_below="@+id/txt_register"
        android:layout_marginTop="40dp"
        android:hint="Username"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_user"
            style="@style/EditText"
            android:drawableStart="@drawable/baseline_person" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/InputLayout"
        android:layout_below="@+id/user_layout"
        android:hint="Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email"
            style="@style/EditText"
            android:drawableStart="@drawable/baseline_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        style="@style/InputLayout"
        android:layout_below="@+id/email_layout"
        android:hint="Phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_phone"
            style="@style/EditText"
            android:inputType="phone"
            android:drawableStart="@drawable/baseline_phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/InputLayout"
        android:layout_below="@+id/phone_layout"
        android:layout_marginBottom="0dp"
        android:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            style="@style/EditText"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock"
            android:drawableEnd="@drawable/baseline_remove_red_eye"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/password_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/txt_confirm"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/password_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/confirmation"
        android:textSize="10sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_marginTop="110dp"
        android:backgroundTint="#525BFF"
        android:fontFamily="@font/poppins"
        android:text="Register"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/acc_confirmation"
        android:textSize="11sp" />

</RelativeLayout>